--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "capstone-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://romafanasiev.github.io/capstone-project",
+  "homepage": ".",
+  // "homepage": "https://romafanasiev.github.io/capstone-project",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
