--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.0.0",
+    "@types/node": "^18.7.14",
+    "@types/react": "^18.0.18",
+    "@types/react-dom": "^18.0.6",
     "dotenv": "^16.0.2",
     "firebase": "^9.9.3",
     "gh-pages": "^4.0.0",
@@ -26,6 +30,7 @@
     "sass": "^1.54.4",
     "stripe": "^10.6.0",
     "styled-components": "^5.3.5",
+    "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
